@@ -1,5 +1,11 @@
 2008-07-15	Jannis Pohlmann <jannis@xfce.org>
 
+	* xfce4-settings-helper/keyboard-shortcuts.c: Make it compile
+	  here.
+	* xfce4-settings-helper/xkb.c: Avoid vision by zerro.
+
+2008-07-15	Jannis Pohlmann <jannis@xfce.org>
+
 	* xfce4-settings-helper/keyboard-shortcuts{c,h},
 	  xfce4-settings-helper/Makefile.am,
 	  xfce4-settings-helper/main.c: Add support for keyboard shortcuts.
